k8s/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-web-tjjud-demo
  labels:
    app.kubernetes.io/name: app-web-tjjud
    app.kubernetes.io/instance: demo
